--- a/index.html
+++ b/index.html
@@ -8,5 +8,7 @@
 <body>
     <h1>Connecting git</h1>
     <h3>Changes can add in the git!</h3>
+    <p>Yay! i can add changes ib=n the git now</p>
+    <p>i can commit in git now!</p>
 </body>
 </html>
